@@ -85,6 +85,10 @@
    - markus@cvs.openbsd.org 2001/02/28 21:21:41
      [sshd.c]
      generate a fake session id, too
+   - markus@cvs.openbsd.org 2001/02/28 21:27:48
+     [channels.c packet.c packet.h serverloop.c]
+     use ignore message to simulate a SSH2_MSG_CHANNEL_DATA message
+     use random content in ignore messages.
 
 20010304
  - (bal) Remove make-ssh-known-hosts.1 since it's no longer valid.
